
- #9338, #9790: Dynlink: make sure *_units () functions report accurate
  information before the first load.
  (Daniel Bünzli, review by Xavier Leroy and Nicolás Ojeda Bär)

- #9802: Ensure signals are handled before Unix.kill returns
  (Stephen Dolan, review by Jacques-Henri Jourdan)

- #9869: Add Unix.SO_REUSEPORT
  (Yishuai Li, review by Xavier Leroy)

### Tools:

- #9551: ocamlobjinfo is now able to display information on .cmxs shared
  libraries natively; it no longer requires libbfd to do so
  (Nicolás Ojeda Bär, review by Daniel Bünzli, Gabriel Scherer,
   Anil Madhavapeddy, and Xavier Leroy)

- #9606, #9635, #9637: fix performance regression in the debugger
  (behaviors quadratic in the size of the debugged program)
  (Xavier Leroy, report by Jacques Garrigue and Virgile Prevosto,
  review by David Allsopp and Jacques-Henri Jourdan)

* #9299, #9795: ocamldep: do not process files during cli parsing. Fixes
  various broken cli behaviours.
  (Daniel Bünzli, review by Nicolás Ojeda Bär)

### Manual and documentation:

- #9468: HACKING.adoc: using dune to get merlin's support
  (Thomas Refis, review by Gabriel Scherer)

### Compiler user-interface and warnings:

- #1931: rely on levels to enforce principality in patterns
  (Thomas Refis and Leo White, review by Jacques Garrigue)

* #9011: Do not create .a/.lib files when creating a .cmxa with no modules.
  macOS ar doesn't support creating empty .a files (#1094) and MSVC doesn't
  permit .lib files to contain no objects. When linking with a .cmxa containing
  no modules, it is now not an error for there to be no .a/.lib file.
  (David Allsopp, review by Xavier Leroy)

- #9560: Report partial application warnings on type errors in applications.
  (Stephen Dolan, report and testcase by whitequark, review by Gabriel Scherer
   and Thomas Refis)

- #9583: when bytecode linking fails due to an unavailable module, the module
  that requires it is now included in the error message.